--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-registry": "^0.2.624",
+    "@solana/web3.js": "^1.31.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -34,16 +37,18 @@
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "^0.17.5",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jest": "^27.0.3",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
-    "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
   "private": true
