--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@solana/spl-governance": "^0.0.6",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.624",
     "@solana/web3.js": "^1.31.0",
+    "bs58": "^4.0.1",
+    "buffer": "^6.0.3",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
