--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@solana/spl-governance": "^0.0.6",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.624",
@@ -44,6 +45,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "^0.17.5",
+    "react-redux": "^7.2.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
