--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.7.1",
-    "@solana/spl-governance": "^0.0.8",
+    "@solana/spl-governance": "^0.0.15",
     "@solana/spl-token": "^0.1.8",
-    "@solana/spl-token-registry": "^0.2.624",
+    "@solana/spl-token-registry": "^0.2.1641",
     "@solana/web3.js": "^1.31.0",
+    "axios": "^0.24.0",
     "bs58": "^4.0.1",
     "buffer": "^6.0.3",
     "expo": "~44.0.0",
