--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.1641",
     "@solana/web3.js": "^1.31.0",
+    "@types/styled-components": "^5.1.20",
+    "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.24.0",
     "bs58": "^4.0.1",
     "buffer": "^6.0.3",
