--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "bs58": "^4.0.1",
     "buffer": "^6.0.3",
     "expo": "~44.0.0",
-    "expo-asset": "~8.4.4",
-    "expo-constants": "~13.0.0",
+    "expo-asset": "~8.4.6",
+    "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.0",
@@ -39,6 +39,7 @@
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
     "react": "17.0.1",
+    "react-devtools": "^4.22.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^2.1.1",
