--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/bottom-tabs": "^6.1.0",
     "@react-navigation/drawer": "^6.1.8",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/native": "^6.0.7",
+    "@react-navigation/native-stack": "^6.3.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@solana/spl-governance": "^0.0.15",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.1641",
-    "@solana/web3.js": "^1.31.0",
+    "@solana/web3.js": "^1.32.0",
     "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.24.0",
@@ -60,6 +60,9 @@
     "@types/react-native": "~0.64.12",
     "jest-expo": "~44.0.1",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "react-devtools-core": "~4.13.5"
   },
   "private": true
 }
