--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "buffer": "^6.0.3",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
+    "expo-community-flipper": "^44.0.1",
     "expo-constants": "~13.0.1",
+    "expo-dev-client": "~0.8.2",
     "expo-font": "~10.0.4",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.0",
@@ -40,8 +42,10 @@
     "expo-web-browser": "~10.1.0",
     "react": "17.0.1",
     "react-devtools": "^4.22.1",
+    "react-devtools-core": "^4.23.0",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-flipper": "^0.131.1",
     "react-native-gesture-handler": "^2.1.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "3.3.2",
