update readme , icon, debugger

--- a/app.json
+++ b/app.json
@@ -7,20 +7,16 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "plugins": [
-      "expo-community-flipper"
-    ],
+    "plugins": ["expo-community-flipper"],
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/GilderLogo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.dawggydawg.gilderapp"
