Fetch realms and extract data

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native": "^6.0.7",
     "@react-navigation/native-stack": "^6.3.0",
     "@reduxjs/toolkit": "^1.7.1",
-    "@solana/spl-governance": "^0.0.15",
+    "@solana/spl-governance": "^0.0.25",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.1641",
     "@solana/web3.js": "^1.32.0",
@@ -39,6 +39,7 @@
     "expo-standard-web-crypto": "^1.2.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
+    "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-devtools": "^4.22.1",
     "react-devtools-core": "^4.23.0",
