--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "@solana/spl-governance": "^0.0.25",
     "@solana/spl-token": "^0.1.8",
-    "@solana/spl-token-registry": "^0.2.1641",
+    "@solana/spl-token-registry": "^0.2.1949",
     "@solana/web3.js": "^1.32.0",
     "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
@@ -49,7 +49,7 @@
     "react-native-gesture-handler": "^2.1.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "^0.17.5",
