--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^6.1.0",
+    "@react-navigation/drawer": "^6.3.0",
     "@react-navigation/native": "^6.0.7",
     "@react-navigation/native-stack": "^6.3.0",
     "@reduxjs/toolkit": "^1.7.1",
@@ -47,6 +48,7 @@
     "react-native": "0.64.3",
     "react-native-flipper": "^0.131.1",
     "react-native-gesture-handler": "^2.1.1",
+    "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
