Fix error in realms in react native

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "expo-dev-client": "~0.8.2",
     "expo-font": "~10.0.4",
     "expo-linking": "~3.0.0",
-    "expo-splash-screen": "~0.14.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-standard-web-crypto": "^1.2.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
@@ -48,6 +48,7 @@
     "react-native": "0.64.3",
     "react-native-flipper": "^0.131.1",
     "react-native-gesture-handler": "^2.1.1",
+    "react-native-get-random-values": "~1.7.0",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
