--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@solana/web3.js": "^1.32.0",
     "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "bs58": "^4.0.1",
     "buffer": "^6.0.3",
     "expo": "~44.0.0",
@@ -35,6 +35,7 @@
     "expo-constants": "~13.0.1",
     "expo-dev-client": "~0.8.2",
     "expo-font": "~10.0.4",
+    "expo-linear-gradient": "^11.0.2",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.1",
     "expo-standard-web-crypto": "^1.2.0",
