--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@react-navigation/bottom-tabs": "^6.1.0",
     "@react-navigation/drawer": "^6.3.0",
     "@react-navigation/native": "^6.0.7",
-    "@react-navigation/native-stack": "^6.3.0",
+    "@react-navigation/native-stack": "^6.4.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@solana/spl-governance": "^0.0.25",
     "@solana/spl-token": "^0.1.8",
-    "@solana/spl-token-registry": "^0.2.1949",
-    "@solana/web3.js": "^1.32.0",
+    "@solana/spl-token-registry": "^0.2.2006",
+    "@solana/web3.js": "^1.32.2",
     "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.25.0",
@@ -32,7 +32,7 @@
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
     "expo-community-flipper": "^44.0.1",
-    "expo-constants": "~13.0.1",
+    "expo-constants": "^13.0.2",
     "expo-dev-client": "~0.8.2",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "^11.0.2",
