--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.25.0",
     "bs58": "^4.0.1",
     "buffer": "^6.0.3",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
     "expo-community-flipper": "^44.0.1",
