--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-navigation/bottom-tabs": "^6.1.0",
     "@react-navigation/drawer": "^6.3.0",
     "@react-navigation/native": "^6.0.7",
@@ -26,6 +27,7 @@
     "@solana/web3.js": "^1.32.2",
     "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
+    "@walletconnect/client": "^2.0.0-beta.22",
     "axios": "^0.25.0",
     "bs58": "^4.0.1",
     "buffer": "^6.0.3",
@@ -34,6 +36,7 @@
     "expo-asset": "~8.4.6",
     "expo-community-flipper": "^44.0.1",
     "expo-constants": "^13.0.2",
+    "expo-crypto-polyfills": "^1.1.0",
     "expo-dev-client": "~0.8.2",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "^11.0.2",
