--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dicebear/avatars": "^4.10.2",
     "@dicebear/avatars-jdenticon-sprites": "^4.10.2",
     "@expo/vector-icons": "^12.0.0",
+    "@iconscout/react-native-unicons": "^1.0.3",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.1.0",
     "@react-navigation/drawer": "^6.3.0",
