Fix weird scrollbar collapse

--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#000000"
     },
+    "owner": "dawggydawg",
     "updates": {
       "fallbackToCacheTimeout": 0
     },
