--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.2156",
     "@solana/web3.js": "^1.34.0",
+    "@toruslabs/openlogin": "^1.4.0",
+    "@toruslabs/openlogin-ed25519": "^1.4.0",
     "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
     "@walletconnect/client": "^2.0.0-beta.22",
@@ -50,6 +52,7 @@
     "expo-web-browser": "~10.1.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "openlogin-expo-sdk": "^0.0.1",
     "react": "17.0.1",
     "react-devtools": "^4.22.1",
     "react-devtools-core": "^4.23.0",
