--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "^0.17.5",
     "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
