--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
     "lodash": "^4.17.21",
+    "lottie-react-native": "5.0.1",
     "numeral": "^2.0.6",
     "openlogin-expo-sdk": "^0.0.1",
     "react": "17.0.1",
