--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "^11.0.2",
     "expo-linking": "~3.0.0",
-    "expo-splash-screen": "~0.14.1",
+    "expo-splash-screen": "^0.14.2",
     "expo-standard-web-crypto": "^1.2.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
