--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
+    "expo-clipboard": "^2.1.1",
     "expo-community-flipper": "^44.0.1",
     "expo-constants": "^13.0.2",
     "expo-crypto-polyfills": "^1.1.0",
@@ -72,7 +73,8 @@
     "react-native-web": "^0.17.5",
     "react-redux": "^7.2.6",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "text-encoding-polyfill": "^0.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
