--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-flipper": "^0.131.1",
     "react-native-gesture-handler": "^2.1.1",
     "react-native-get-random-values": "~1.7.0",
+    "react-native-pager-view": "5.4.9",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
