Potential wallet connect fix IOS

--- a/app.json
+++ b/app.json
@@ -2,10 +2,10 @@
   "expo": {
     "name": "Gilder",
     "slug": "gilder-app",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "orientation": "portrait",
     "icon": "./assets/images/DarkIcon.png",
-    "scheme": "myapp",
+    "scheme": "gilder",
     "userInterfaceStyle": "automatic",
     "plugins": ["expo-community-flipper"],
     "splash": {
