--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "@sentry/react-native": "^3.3.3",
     "@solana/spl-governance": "^0.0.29",
     "@solana/spl-token": "^0.2.0",
     "@solana/spl-token-registry": "^0.2.2849",
@@ -39,18 +40,21 @@
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
+    "expo-application": "~4.0.1",
     "expo-asset": "~8.4.6",
     "expo-clipboard": "^2.1.1",
     "expo-community-flipper": "^44.0.1",
-    "expo-constants": "^13.0.2",
+    "expo-constants": "~13.0.1",
     "expo-crypto-polyfills": "^1.1.0",
     "expo-dev-client": "~0.8.2",
+    "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "^11.0.2",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "^0.14.2",
     "expo-standard-web-crypto": "^1.2.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.0.1",
@@ -74,6 +78,7 @@
     "react-native-web": "^0.17.5",
     "react-redux": "^7.2.6",
     "redux-persist": "^6.0.0",
+    "sentry-expo": "^4.0.0",
     "styled-components": "^5.3.3",
     "text-encoding-polyfill": "^0.6.7"
   },
