--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@react-navigation/bottom-tabs": "^6.1.0",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
-    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/native-stack": "^6.5.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@sentry/react-native": "^3.3.3",
-    "@solana/spl-governance": "^0.0.29",
+    "@solana/spl-governance": "^0.0.34",
     "@solana/spl-token": "^0.2.0",
     "@solana/spl-token-registry": "^0.2.2849",
     "@solana/web3.js": "1.34.0",
@@ -40,7 +40,7 @@
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
-    "expo-application": "~4.0.1",
+    "expo-application": "^4.0.2",
     "expo-asset": "~8.4.6",
     "expo-clipboard": "^2.1.1",
     "expo-community-flipper": "^44.0.1",
@@ -48,8 +48,8 @@
     "expo-crypto-polyfills": "^1.1.0",
     "expo-dev-client": "~0.8.2",
     "expo-device": "~4.1.0",
-    "expo-font": "~10.0.4",
-    "expo-linear-gradient": "^11.0.2",
+    "expo-font": "^10.0.5",
+    "expo-linear-gradient": "^11.0.3",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "^0.14.2",
     "expo-standard-web-crypto": "^1.2.0",
