--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@dicebear/avatars": "^4.10.2",
     "@dicebear/avatars-jdenticon-sprites": "^4.10.2",
     "@expo/vector-icons": "^12.0.0",
@@ -35,11 +36,11 @@
     "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
     "@walletconnect/client": "^2.0.0-beta.22",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
-    "expo": "~44.0.0",
+    "expo": "^44.0.6",
     "expo-application": "^4.0.2",
     "expo-asset": "~8.4.6",
     "expo-clipboard": "^2.1.1",
@@ -56,6 +57,7 @@
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
+    "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.0.1",
     "numeral": "^2.0.6",
