--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@solana/spl-governance": "^0.0.34",
     "@solana/spl-token": "^0.2.0",
     "@solana/spl-token-registry": "^0.2.2849",
-    "@solana/web3.js": "1.34.0",
+    "@solana/web3.js": "^1.37.0",
     "@solflare-wallet/pfp": "^0.0.6",
     "@toruslabs/openlogin": "^1.7.1",
     "@toruslabs/openlogin-ed25519": "^1.7.0",
@@ -68,14 +68,15 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-flipper": "^0.131.1",
-    "react-native-gesture-handler": "^2.1.1",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
     "react-native-pager-view": "5.4.9",
-    "react-native-reanimated": "1.13.1",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-ui-lib": "^6.12.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "^0.17.5",
     "react-redux": "^7.2.6",
