--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-native-flipper": "^0.131.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
-    "react-native-pager-view": "5.4.9",
+    "react-native-pager-view": "^5.4.15",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
