--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "expo-font": "^10.0.5",
     "expo-linear-gradient": "^11.0.3",
     "expo-linking": "~3.0.0",
+    "expo-notifications": "~0.14.0",
     "expo-splash-screen": "^0.14.2",
     "expo-standard-web-crypto": "^1.2.0",
     "expo-status-bar": "~1.2.0",
