--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@types/styled-components-react-native": "^5.1.3",
     "@walletconnect/client": "^2.0.0-beta.22",
     "axios": "^0.26.1",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
     "expo": "^44.0.6",
     "expo-application": "^4.0.2",
     "expo-asset": "~8.4.6",
