--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@dicebear/avatars": "^4.10.2",
     "@dicebear/avatars-jdenticon-sprites": "^4.10.2",
     "@expo/vector-icons": "^12.0.0",
+    "@gorhom/bottom-sheet": "^4.2.2",
     "@iconscout/react-native-unicons": "^1.0.3",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.1.0",
