--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expo-dev-client": "~0.8.2",
     "expo-device": "~4.1.0",
     "expo-font": "^10.0.5",
+    "expo-haptics": "~11.1.0",
     "expo-linear-gradient": "^11.0.3",
     "expo-linking": "~3.0.0",
     "expo-notifications": "~0.14.0",
