--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@gorhom/bottom-sheet": "^4.2.2",
     "@iconscout/react-native-unicons": "^1.0.3",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.1.0",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
