--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@apollo/client": "^3.6.4",
     "@dicebear/avatars": "^4.10.2",
     "@dicebear/avatars-jdenticon-sprites": "^4.10.2",
-    "@expo/vector-icons": "^12.0.0",
+    "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.2.2",
     "@iconscout/react-native-unicons": "^1.0.3",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-picker/picker": "2.2.1",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.1.0",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
@@ -44,50 +44,49 @@
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
-    "expo": "^44.0.6",
-    "expo-application": "^4.0.2",
-    "expo-asset": "~8.4.6",
-    "expo-clipboard": "^2.1.1",
+    "expo": "^45.0.0",
+    "expo-application": "~4.1.0",
+    "expo-asset": "~8.5.0",
+    "expo-clipboard": "~3.0.1",
     "expo-community-flipper": "^44.0.1",
-    "expo-constants": "~13.0.1",
+    "expo-constants": "~13.1.1",
     "expo-crypto-polyfills": "^1.1.0",
-    "expo-dev-client": "~0.8.2",
-    "expo-device": "~4.1.0",
-    "expo-font": "^10.0.5",
-    "expo-haptics": "~11.1.0",
-    "expo-linear-gradient": "^11.0.3",
-    "expo-linking": "~3.0.0",
-    "expo-notifications": "~0.14.0",
-    "expo-splash-screen": "^0.14.2",
+    "expo-device": "~4.2.0",
+    "expo-font": "~10.1.0",
+    "expo-haptics": "~11.2.0",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-linking": "~3.1.0",
+    "expo-notifications": "~0.15.2",
+    "expo-splash-screen": "~0.15.1",
     "expo-standard-web-crypto": "^1.2.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
-    "expo-web-browser": "~10.1.0",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
+    "expo-web-browser": "~10.2.1",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.0.1",
     "numeral": "^2.0.6",
     "openlogin-expo-sdk": "^0.0.2",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-devtools": "^4.22.1",
     "react-devtools-core": "^4.23.0",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-flipper": "^0.131.1",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-get-random-values": "~1.7.0",
-    "react-native-pager-view": "^5.4.15",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-get-random-values": "~1.8.0",
+    "react-native-pager-view": "5.4.15",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-ui-lib": "^6.15.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-web": "^0.17.5",
+    "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
     "redux-persist": "^6.0.0",
-    "sentry-expo": "^4.0.0",
+    "sentry-expo": "^4.2.0",
     "styled-components": "^5.3.3",
     "text-encoding-polyfill": "^0.6.7"
   },
@@ -96,8 +95,8 @@
     "@types/jest": "^27.0.3",
     "@types/numeral": "^2.0.2",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "jest-expo": "~44.0.1",
+    "@types/react-native": "~0.67.6",
+    "jest-expo": "^44.0.0",
     "typescript": "~4.3.5"
   },
   "resolutions": {
