--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@gorhom/bottom-sheet": "^4.2.2",
     "@iconscout/react-native-unicons": "^1.0.3",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "8.2.0",
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.1.0",
     "@react-navigation/drawer": "^6.3.1",
@@ -48,11 +49,17 @@
     "expo-constants": "~13.1.1",
     "expo-crypto-polyfills": "^1.1.0",
     "expo-device": "~4.2.0",
+    "expo-document-picker": "~10.2.1",
+    "expo-file-system": "~14.0.0",
     "expo-font": "~10.1.0",
     "expo-haptics": "~11.2.0",
+    "expo-image-manipulator": "~10.3.1",
+    "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-linking": "~3.1.0",
+    "expo-media-library": "~14.1.0",
     "expo-notifications": "~0.15.2",
+    "expo-sharing": "~10.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-standard-web-crypto": "^1.2.0",
     "expo-status-bar": "~1.3.0",
@@ -82,6 +89,7 @@
     "react-redux": "^7.2.6",
     "redux-persist": "^6.0.0",
     "sentry-expo": "^4.2.0",
+    "stream-chat-expo": "^4.7.0",
     "styled-components": "^5.3.3",
     "text-encoding-polyfill": "^0.6.7"
   },
