--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "expo-linking": "~3.1.0",
     "expo-media-library": "~14.1.0",
     "expo-notifications": "~0.15.2",
+    "expo-secure-store": "^11.2.0",
     "expo-sharing": "~10.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-standard-web-crypto": "^1.2.0",
@@ -88,7 +89,6 @@
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
-    "redux-persist": "^6.0.0",
     "sentry-expo": "^4.2.0",
     "stream-chat-expo": "^4.7.0",
     "styled-components": "^5.3.3",
