--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-native-flipper": "^0.131.1",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "5.4.15",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
