--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "expo-linear-gradient": "~11.3.0",
     "expo-linking": "~3.1.0",
     "expo-media-library": "~14.1.0",
-    "expo-notifications": "~0.15.2",
+    "expo-notifications": "^0.15.4",
     "expo-secure-store": "^11.2.0",
     "expo-sharing": "~10.2.0",
     "expo-splash-screen": "~0.15.1",
@@ -78,10 +78,10 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
     "react-native-image-viewing": "^0.2.2",
-    "react-native-pager-view": "5.4.15",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-pager-view": "^5.4.25",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.14.1",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-ui-lib": "^6.18.0",
@@ -100,7 +100,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "jest-expo": "^44.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "^4.7.4"
   },
   "resolutions": {
     "react-devtools-core": "~4.13.5"
