--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "jest-expo": "^44.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "4.3.5"
   },
   "resolutions": {
     "react-devtools-core": "~4.13.5"
