--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.4",
+    "@cardinal/namespaces": "^4.1.26",
     "@expo/vector-icons": "^13.0.0",
     "@iconscout/react-native-unicons": "^1.0.3",
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -103,7 +104,8 @@
     "typescript": "4.3.5"
   },
   "resolutions": {
-    "react-devtools-core": "~4.13.5"
+    "react-devtools-core": "~4.13.5",
+    "@solana/web3.js": "^1.47.3"
   },
   "private": true
 }
