--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.4",
+    "@blockworks-foundation/voter-stake-registry-client": "^0.2.3",
     "@cardinal/namespaces": "^4.1.26",
     "@expo/vector-icons": "^13.0.0",
     "@iconscout/react-native-unicons": "^1.0.3",
+    "@project-serum/anchor": "^0.24.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "8.2.0",
     "@react-native-picker/picker": "2.4.0",
@@ -30,7 +32,7 @@
     "@solana/spl-governance": "^0.0.34",
     "@solana/spl-token": "^0.2.0",
     "@solana/spl-token-registry": "^0.2.4574",
-    "@solana/web3.js": "^1.47.3",
+    "@solana/web3.js": "1.37.1",
     "@toruslabs/openlogin": "^2.0.1",
     "@toruslabs/openlogin-ed25519": "^2.0.0",
     "@types/styled-components": "^5.1.20",
@@ -105,7 +107,7 @@
   },
   "resolutions": {
     "react-devtools-core": "~4.13.5",
-    "@solana/web3.js": "^1.47.3"
+    "@solana/web3.js": "^1.37.1"
   },
   "private": true
 }
