--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "fp-ts": "^2.12.1",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
-    "lottie-react-native": "5.0.1",
+    "lottie-react-native": "^5.1.3",
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-devtools": "^4.22.1",
