--- a/package.json
+++ b/package.json
@@ -64,14 +64,14 @@
     "expo-secure-store": "^11.2.0",
     "expo-sharing": "~10.2.0",
     "expo-splash-screen": "~0.15.1",
-    "expo-standard-web-crypto": "^1.2.0",
+    "expo-standard-web-crypto": "^1.3.0",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo-updates": "~0.13.3",
     "expo-web-browser": "~10.2.1",
     "fp-ts": "^2.12.1",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^5.1.3",
+    "lottie-react-native": "5.0.1",
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-devtools": "^4.22.1",
@@ -81,10 +81,10 @@
     "react-native-gesture-handler": "2.2.1",
     "react-native-get-random-values": "~1.8.0",
     "react-native-image-viewing": "^0.2.2",
-    "react-native-pager-view": "^5.4.25",
-    "react-native-reanimated": "^2.9.1",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.14.1",
+    "react-native-pager-view": "5.4.15",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-ui-lib": "^6.18.0",
