--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo": "^45.0.0",
     "expo-application": "~4.1.0",
     "expo-asset": "~8.5.0",
+    "expo-av": "^11.2.3",
     "expo-clipboard": "~3.0.1",
     "expo-constants": "~13.1.1",
     "expo-crypto-polyfills": "^1.1.0",
