--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@blockworks-foundation/voter-stake-registry-client": "^0.2.3",
     "@cardinal/namespaces": "^4.1.26",
     "@expo/vector-icons": "^13.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@iconscout/react-native-unicons": "^1.0.3",
     "@project-serum/anchor": "^0.24.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -86,7 +93,7 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "^12.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-ui-lib": "^6.18.0",
     "react-native-url-polyfill": "^1.3.0",
