android build config, fix cardinal bug

--- a/eas.json
+++ b/eas.json
@@ -6,6 +6,19 @@
     "base": {
       "env": {}
     },
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
     "devclient": {
       "extends": "base",
       "releaseChannel": "default",
