--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "2.2.1",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-hyperlink": "^0.0.19",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "5.4.15",
     "react-native-reanimated": "~2.8.0",
