--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "expo-linear-gradient": "~11.4.0",
     "expo-linking": "~3.2.2",
     "expo-media-library": "~14.2.0",
-    "expo-notifications": "~0.16.1",
+    "expo-notifications": "^0.16.1",
     "expo-secure-store": "~11.3.0",
     "expo-sharing": "~10.3.0",
     "expo-splash-screen": "~0.16.1",
