--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "expo-splash-screen": "~0.16.1",
     "expo-standard-web-crypto": "^1.3.0",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.3",
+    "expo-updates": "^0.14.3",
     "expo-web-browser": "~11.0.0",
     "fp-ts": "^2.12.1",
     "graphql": "^16.3.0",
@@ -99,7 +99,7 @@
     "react-native-web": "~0.18.7",
     "react-redux": "^7.2.6",
     "sentry-expo": "~5.0.0",
-    "stream-chat-expo": "^4.12.2",
+    "stream-chat-expo": "^4.13.0",
     "styled-components": "^5.3.3",
     "text-encoding-polyfill": "^0.6.7",
     "tweetnacl": "^1.0.3"
