Fix voting state bug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "strict": true
   },
-  "types": ["jest", "styled-components-react-native"]
+  "types": ["jest", "styled-components-react-native"],
+  "jsx": "react"
 }
