--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@apollo/client": "^3.6.4",
     "@blockworks-foundation/voter-stake-registry-client": "^0.2.3",
     "@cardinal/namespaces": "^4.1.26",
+    "@expo/config-plugins": "^5.0.1",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
@@ -49,7 +50,7 @@
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
-    "expo": "^46.0.0",
+    "expo": "^46.0.9",
     "expo-application": "~4.2.2",
     "expo-asset": "~8.6.1",
     "expo-av": "~12.0.3",
