--- a/package.json
+++ b/package.json
@@ -91,12 +91,12 @@
     "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "5.4.24",
-    "react-native-reanimated": "~2.9.1",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-ui-lib": "^6.20.3",
+    "react-native-ui-lib": "^6.21.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^7.2.6",
