--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "5.4.24",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
