--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-native-ui-lib": "^6.21.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
+    "react-native-webview": "^11.23.1",
     "react-redux": "^7.2.6",
     "sentry-expo": "^5.0.1",
     "stream-chat-expo": "^4.14.0",
