--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@solana/spl-governance": "^0.0.34",
     "@solana/spl-token": "^0.2.0",
     "@solana/spl-token-registry": "^0.2.4574",
+    "@solana/wallet-adapter-base": "^0.9.16",
     "@solana/web3.js": "1.37.1",
     "@toruslabs/openlogin": "^2.3.0",
     "@toruslabs/openlogin-ed25519": "^2.0.0",
