--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "expo-web-browser": "~11.0.0",
     "fp-ts": "^2.12.1",
     "graphql": "^16.3.0",
+    "graphql-request": "^5.0.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.1.3",
     "numeral": "^2.0.6",
