--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@sentry/react-native": "^4.1.3",
     "@solana/pay": "^0.2.4",
     "@solana/spl-governance": "^0.3.14",
-    "@solana/spl-token": "^0.2.0",
+    "@solana/spl-token": "^0.3.5",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-base": "^0.9.16",
     "@solana/web3.js": "1.52",
@@ -56,6 +56,7 @@
     "expo-application": "~4.2.2",
     "expo-asset": "~8.6.1",
     "expo-av": "~12.0.3",
+    "expo-barcode-scanner": "~11.4.0",
     "expo-clipboard": "~3.1.0",
     "expo-constants": "~13.2.3",
     "expo-crypto-polyfills": "^1.1.0",
