--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.4",
     "@blockworks-foundation/voter-stake-registry-client": "^0.2.3",
-    "@cardinal/namespaces": "^4.1.26",
+    "@cardinal/namespaces": "^4.1.57",
     "@expo/config-plugins": "^5.0.1",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -121,7 +121,8 @@
     "typescript": "^4.6.3"
   },
   "resolutions": {
-    "react-devtools-core": "~4.13.5"
+    "react-devtools-core": "~4.13.5",
+    "@solana/spl-token": "^0.3.5"
   },
   "private": true
 }
