--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.7.1",
-    "@sentry/react-native": "^4.1.3",
+    "@sentry/react-native": "4.2.2",
     "@solana/pay": "^0.2.4",
     "@solana/spl-governance": "^0.3.14",
     "@solana/spl-token": "^0.3.5",
