--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "@sentry/react-native": "4.2.2",
     "@solana/pay": "^0.2.4",
-    "@solana/spl-governance": "^0.3.14",
+    "@solana/spl-governance": "^0.3.15",
     "@solana/spl-token": "^0.3.5",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-base": "^0.9.16",
@@ -75,7 +75,7 @@
     "expo-secure-store": "~11.3.0",
     "expo-sharing": "~10.3.0",
     "expo-splash-screen": "~0.16.1",
-    "expo-standard-web-crypto": "^1.3.0",
+    "expo-standard-web-crypto": "^1.4.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "^0.14.3",
     "expo-web-browser": "~11.0.0",
@@ -96,12 +96,12 @@
     "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "5.4.24",
-    "react-native-reanimated": "~2.9.1",
+    "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-ui-lib": "^6.21.0",
+    "react-native-ui-lib": "^6.21.2",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "^11.23.1",
