--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@gilder/standard-wallet": "^0.0.3",
     "@gorhom/bottom-sheet": "^4.4.3",
     "@project-serum/anchor": "^0.24.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/netinfo": "9.3.0",
     "@react-native-picker/picker": "2.4.2",
     "@react-navigation/bottom-tabs": "^6.1.0",
@@ -35,6 +35,9 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "@segment/analytics-react-native": "^2.9.1",
+    "@segment/analytics-react-native-plugin-mixpanel": "^0.2.4",
+    "@segment/sovran-react-native": "^0.4.5",
     "@sentry/react-native": "4.2.2",
     "@solana/pay": "^0.2.4",
     "@solana/spl-governance": "^0.3.15",
